<?xml version="1.0"?>
<package>
  <name>test_find_tinyxml</name>
  <version>0.0.0</version>
  <description>Test package to find TinyXML</description>

  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <license>BSD</license>

  <author email="william@osrfoundation.org">William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

</package>
